fixed overflow issue on post page

--- a/src/components/post-component/post.css
+++ b/src/components/post-component/post.css
@@ -1,3 +1,7 @@
+.overflowhidden {
+    overflow-x: hidden;
+}
+
 .breadCrumbs {
     background-color: #fbfbfb;
     padding: 0px;
